style.css
:root{
    --soft-red: hsl(7, 99%, 70%);
    --yellow: hsl(51, 100%, 49%);
    --very-dark-desaturated-blue: hsl(212, 27%, 19%);
    --very-dark-grayish-blue: hsl(213, 9%, 39%);
    --dark-grayish-blue: hsl(232, 10%, 55%);
    --grayish-blue: hsl(210, 4%, 67%);
    --white: hsl(0, 0%, 100%);

    --yellow-underline: rgb(255,249,171);
    --red-underline: rgb(254,210,201);
    --footer-color: rgb(128,203,184);


    /* Graphic Design Text */
    --dark-desaturated-cyan: hsl(167, 40%, 24%);

    /* Photography Text */
    --dark-blue: hsl(198, 62%, 26%);

    /* Footer */
    --dark-moderate-cyan : hsl(168, 34%, 41%);
    
}

/* font-family: 'Barlow', sans-serif;
font-family: 'Fraunces', serif; */

*{
    margin: 0;
    padding: 0;
    font-size: 18px;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}

#top-container{
    background-image: url("images/desktop/image-header.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 100vh;

}

header{
    margin: 0 auto;
    padding-top: 2rem;
    width: 90%;
    display: grid;
    grid-template-columns: 1fr 3fr;
    justify-content: space-between;
}

nav#top-nav{
    justify-self: end;
}

nav, p{
    font-family: 'Barlow', sans-serif;
}

nav#top-nav ul li a#contact, h1, h2, a.learn-more, p.testimony-person strong{
    font-family: 'Fraunces', serif;
} 

nav#top-nav ul li{
    display: inline;
}

nav#top-nav ul li a{
    color: white;
    font-size: 0.9rem;
    margin-left: 2rem;
    text-decoration: none;
}

nav#top-nav ul li a#contact{
    background-color: white;
    border-radius: 40px;
    color: black;
    font-size: 0.7rem;
    font-weight: 700;
    padding: 0.7rem 1.5rem;
    text-transform: uppercase;
}

main{
    display: grid;
    height: 100%;
}

main h1{
    justify-self: center;
    color: white;
    font-size: 2.5rem;
    font-weight: 900;
    margin-top: 10vh;
    min-width: 85%;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 0.5rem;
}

#pic-desc{
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.small-card{
    min-height: 70vh;
    width: auto;
    /* width: 50%; */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.content{
    display: grid;
    align-content: center;
    max-width: 60%;
    margin: 0 auto;
}

.content h1{
    font-size: 2rem;
}

.content h1, .content-2 h2, a.learn-more{
    color: var(--very-dark-desaturated-blue);
    font-family: 'Fraunces', serif;
    margin-bottom: 2rem;
}

.content p, .content-2 p{
    color: var(--very-dark-grayish-blue);
}

.content-2{
    display: grid;
    align-content: start;
    height: 100%;
    max-width: 60%;
    margin: 0 auto;
    margin-top: 19rem;
    padding-bottom: 10vh;
    text-align: center;
}

.content-2 h2{
    font-size: 1.3rem;
    font-weight: 900;
    text-transform: capitalize;
}

.content-2 p{
    font-size: 0.9rem;
    font-weight: 600;
    line-height: 1.3rem;
}

.content-2 .graphic{
    color: var(--dark-desaturated-cyan);
}

.content-2 .photography{
    color: var(--dark-blue);
}

a.learn-more{
    font-size: 0.88rem;
    margin-top: 2rem;
    margin-bottom: 0;
    text-decoration: none;
    text-transform: uppercase;
    /* text-decoration: underline; */
    /* text-decoration-thickness: 7px; */
}

a.learn-more.one::after{
    /* text-decoration-color: var(--yellow-underline); */
    background-color: var(--yellow-underline);
    /* content: "";
    width: 100%;
    height: 10px; */

    /* content: "";
    position: absolute;
    left: -8px;
    bottom: 0;
    z-index: -1;
    display: block;
    width: calc(100% + 16px);
    border-radius: 100px;
    height: 10px;
    opacity: 0.2;
    transition: opacity 0.5s; */
}

/* a.learn-more.two{
    text-decoration-color: var(--red-underline);
} */

.egg {
    background-image: url("images/desktop/image-transform.jpg");
}

.cup{
    background-image: url("images/desktop/image-stand-out.jpg");
}

.berries{
    background-image: url("images/desktop/image-graphic-design.jpg");
}

.orange{
    background-image: url("images/desktop/image-photography.jpg");
}

#testimonial-section{
    display: grid;
}

h2#testimonial-header{
    justify-self: center;
    color: var(--grayish-blue);
    font-weight: 900;
    text-transform: uppercase;
    letter-spacing: 0.3rem;
}

#testimonials{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2rem;
    max-width: 85%;
    margin: 0 auto;
}

.testimonial{
    display: grid;
    margin: 0 auto;
    width: 85%;
}

.testimonial img{
    justify-self: center;
}

.testimonial p{
    color: var(--very-dark-grayish-blue);
    text-align: center;
    font-size: 0.9rem;
    line-height: 1.35rem;
}

.testimonial p.testimony-person{
    color: var(--grayish-blue);
    font-size: 0.75rem;
}

.testimonial p.testimony-person strong{
    color: black;
    display: block;
}

.testimonial img{
    border-radius: 50%;
    height: 3rem;
}

#pictures{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

img.gallery{
    width: 25vw;
}

footer{
    background-color: var(--footer-color);
}

nav#bottom-nav ul li {
    color: var(--dark-desaturated-cyan);
}



@media screen and (max-width:850px){

}

